<resources>

    <string name="app_name">Læsomondo</string>

    <!-- START ACTIVITY -->
    <string name="StartName">E-mail</string>
    <string name="StartPassword">Kodeord</string>
    <string name="StartLogin">Log ind</string>
    <string name="StartCreateUser"><u>Opret dig som ny bruger her!</u></string>
    <string name="StartForgotPassword"><u>Glemt password</u></string>
    <string name="StartToastSuccess">Velkommen</string>
    <string name="StartToastNoSuccess">Fejl ved login</string>
    <string name="auth_failed">Fejl ved login</string>
    <string name="Prefrence_file_key">com.example.cille_000.laesomondo.PREFERENCE_FILE_KEY</string>

    <!-- CREATE USER ACTIVITY -->
    <string name="CreateUserName">E-mail</string>
    <string name="CreateUserAge">Fødselsdato</string>
    <string name="CreateUserEmail">Email adresse</string>
    <string name="CreateUserPicture">Vælg billede:</string>
    <string name="CreateUserAvatar">Avatar</string>
    <string name="CreateUserLogin"><u>Har du allerede en bruger?</u></string>
    <string name="CreateUserSignup">Opret bruger</string>
    <string name="reg_failed">Noget gik galt</string>
    <string name="DatePickerCancel">Annullér</string>
    <string name="DatePickerConfirm">Godkend</string>

    <!-- CHALLENGE INFO FRAGMENT -->
    <string name="ChallengeInfoFragmentTitle">Din første udfordring</string>
    <string name="ChallengeInfoFragmentDes">For at vi kan placere dig i det rigtige niveau fra start af, skal du igennem en såkaldt læseudfordring.
        Denne udfordring består af en tekst, som du skal læse, efterfulgt af tre spørgsmål om denne tekst. Du vil blive målt på din læsehastighed samt antal korrekte svar.
        Ud fra denne, og alle andre udfordringer, vil du modtage nogle points, kaldt "experience points". Du kan til enhver tid gå ind på din profil og se dine resultater og udvikling. God læselyst.</string>
    <string name="ChallengeInfoFragmentButton">Tag udfordringen</string>
    <string name="ChallengeInfoFragmentNotNow"><u>Senere</u></string>

    <!-- TEXT INFO FRAGMENT -->
    <string name="Second">Skrevet af:  </string>
    <string name="Third">Bogen handler om  </string>
    <string name="StartText">Start udfordring  </string>
    <string name="TextCover">Text Cover</string>
    <string name="CancelTest"><u>Annuller</u></string>

    <!-- Test Result Activity-->
    <string name="result">Udfordring klaret!</string>
    <string name="ButtonTest">OK</string>

    <!-- USERPROFILE FRAGMENT -->
    <string name="UserProfileFragmentWordMin"><b>Ord i minuttet:</b></string>
    <string name="UserProfileFragmentXP"><b>Point:</b></string>
    <string name="UserProfileFragmentLix"><b>Sværhedsgrad:</b></string>
    <string name="UserProfileFragmentAchievement">Trofæer</string>
    <string name="UserProfileFragmentStats">Statistik</string>
    <string name="UserProfileFragmentPilTilbage">Tilbage</string>

    <!-- MAIN SCREEN -->
    <string name="MainScreenTitle">Udfordringer</string>
    <string name="MainScreenBurgermenu">Menu</string>
    <string name="MainScreenUserProfile">Din profil</string>

    <!-- MENU FRAGMENT -->
    <string name="MenuFragmentSettings">Indstillinger</string>
    <string name="MenuFragmentHelp">Hjælp</string>
    <string name="MenuFragmentContact">Kontakt</string>

    <!-- ACHIEVEMENT FRAGMENT -->
    <string name="AchievementFragmentA">AchivementA</string>
    <string name="AchievementFragmentB">AchivementB</string>
    <string name="AchievementFragmentC">AchivementC</string>
    <string name="AchievementFragmentD">AchivementD</string>
    <string name="AchievementFragmentE">AchivementE</string>
    <string name="AchievementFragmentF">AchivementF</string>
    <string name="AchievementFragmentG">AchivementG</string>
    <string name="AchievementFragmentH">AchivementH</string>
    <string name="AchievementFragmentI">AchivementI</string>
    <string name="AchievementFragmentAInfo">Hurra! Du gennemførte din første udfordring</string>
    <string name="AchievementFragmentBInfo">Du kom i level 5</string>
    <string name="AchievementFragmentCInfo">Du kom i level 10</string>
    <string name="AchievementFragmentDInfo">Du kom i level 15</string>
    <string name="AchievementFragmentEInfo">20 ord i minuttet</string>
    <string name="AchievementFragmentFInfo">40 ord i minuttet</string>
    <string name="AchievementFragmentGInfo">Du læser med sværhedsgraden Lix 10</string>
    <string name="AchievementFragmentHInfo">Du læser med sværhedsgraden Lix 20</string>
    <string name="AchievementFragmentIInfo">Du læser med sværhedsgraden Lix 30</string>

    <!-- STATS FRAGMENT -->
    <string name="StatsFragmentDescription">Her kan du sammenligne dig med gennemsnittet</string>
    <string name="StatsFragmentLabelOne">Lix</string>
    <string name="StatsFragmentLabelTwo">Ord/Min</string>
    <string name="StatsFragmentLabelThree">Korrekthed</string>
    <string name="StatsFragmentLabelFour">Læste Tekster</string>
    <string name="StatsFragmentLabelFive">Level</string>
    <string name="StatsFragmentDataOne">Dig</string>
    <string name="StatsFragmentDataTwo">Gennemsnittet</string>

    <!-- SETTINGS -->
    <string name="SettingsTextSizeHeading">Justér skriftstørrelse</string>
    <string name="SettingsTextSizeDes">Dette vil ændre på skriftstørrelsen i dine læsetekster. Træk i baren for at justere.</string>
    <string name="SettingsCurrentTextSize">16</string>
    <string name="SettingsAvatarHeading">Skift profilbillede</string>
    <string name="SettingsNotiHeading">Notifikationer</string>
    <string name="SettingsNotiDes">Slå den ugentlige notifikation til/fra: </string>
    <string name="SettingsAvatarDes">Nuværende: </string>
    <string name="SettingsSave">Gem ændringer</string>

    <!-- STATS FRAGMENT -->
    <string name="StatsFragment">Stats</string>

    <!-- Contact FRAGMENT -->
    <string name="Contact">Skriv en mail til os:</string>
    <string name="ContactSubject">Emne</string>
    <string name="ContactMessage">Besked</string>
    <string name="ContactSend">Send</string>
    <string name="ContactCall">Ring til os på:</string>
    <string name="ContactNumber"><u>+45 12 34 56 78</u></string>

    <!-- Help/FAQ FRAGMENT -->
    <string name="Q1">"Hvordan skifter jeg bruger?"</string>
    <string name="A1">Først skal man logge ud ved at gå ind i menuen og vælge "log ud".
        Herefter logger man ind med den bruger, man ønsker at skifte til.</string>
    <string name="Q2">"Hvordan ser jeg, hvilket level jeg er i?"</string>
    <string name="A2">Dit level kan du finde under din profil. Profilen finder du ved at klikke på profil-ikonet øverst til højre på skærmen.</string>
    <string name="Q3">"Hvordan kan jeg se mine trofæer?"</string>
    <string name="A3">Du finder dine trofæer ved at klikke på trofæ-knappen under din profil.</string>
    <string name="Q4">"Hvordan kan jeg se min statistik?"</string>
    <string name="A4">Du finder din statistik ved at klikke på statistik-knappen under din profil.</string>
    <string name="Q5">"Hvad er LIX?"</string>
    <string name="A5">Lix er en måleenhed for hvor svær teksten er. F.eks er en børne bog under 24, mens middel er mellem 35 og 44. </string>

    <!-- NAVDRAWER -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_books">Udfordringer</string>
    <string name="nav_item_settings">Indstillinger</string>
    <string name="nav_item_help">Hjælp / FAQ</string>
    <string name="nav_item_contact">Kontakt</string>
    <string name="nav_item_logout">Log ud</string>

    <string name="title_books">Udfordringer</string>
    <string name="title_settings">Indstillinger</string>
    <string name="title_help">Hjælp / FAQ</string>
    <string name="title_contact">Kontakt</string>
    <string name="title_userprofile">Din profil</string>
    <string name="title_achievements">Trofæer</string>
    <string name="title_stats">Statistik</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_books</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_contact</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
