<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:isScrollContainer="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:text="@string/Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:text="@string/A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:text="@string/A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:text="@string/A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:text="@string/Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:text="@string/A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:text="@string/Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17dp"
                android:padding="15dp"
                android:textColor="@color/colorGreyDark"/>

            <TextView
                android:text="@string/A5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>