<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_createuser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="105dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <com.example.cille_000.laesomondo.util.NoPopupEditText
            android:id="@+id/createuser_name"
            android:hint="@string/CreateUserName"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <com.example.cille_000.laesomondo.util.NoPopupEditText
            android:id="@+id/createuser_password"
            android:hint="@string/StartPassword"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <com.example.cille_000.laesomondo.util.NoPopupEditText
            android:id="@+id/createuser_age"
            android:hint="@string/CreateUserAge"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:inputType="date" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="40dp">

            <TextView
                android:id="@+id/createuser_picture"
                android:text="@string/CreateUserPicture"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:id="@+id/createuser_picturebtn"
                android:background="@drawable/av1"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:contentDescription="@string/CreateUserAvatar"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_marginBottom="35dp">

            <Button
                android:id="@+id/createuser_signup"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/CreateUserSignup"
                android:textColor="@color/colorWhite"
                android:background="@color/colorComplimentary"/>

            <TextView
                android:id="@+id/createuser_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateUserLogin"
                android:clickable="true"/>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>