<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:weightSum="100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuFragmentSettings"
            android:textSize="18sp"
            android:id="@+id/menuSettings"
            android:layout_marginBottom="10dp"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuFragmentHelp"
            android:textSize="18sp"
            android:id="@+id/menuHelp"
            android:layout_marginBottom="10dp"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/MenuFragmentContact"
            android:textSize="18sp"
            android:id="@+id/menuContact"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SettingsLogOut"
            android:textSize="18sp"
            android:id="@+id/menulogout"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>