<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@color/colorWhite"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_marginTop="30dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/level"
                android:layout_gravity="center"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorWhite"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:id="@+id/userprofile_XP"
                    android:text="@string/UserProfileFragmentXP"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/userprofile_XPValue"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/userprofile_wordmin"
                    android:text="@string/UserProfileFragmentWordMin"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/userprofile_wordminvalue"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"/>


                <TextView
                    android:id="@+id/userprofile_lix"
                    android:text="@string/UserProfileFragmentLix"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/userprofile_lixvalue"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/userprofile_achievement"
                    android:background="@drawable/trophy"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/UserProfileFragmentAchievement"/>

                <ImageButton
                    android:id="@+id/userprofile_stats"
                    android:background="@drawable/chart"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/UserProfileFragmentStats"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>